# automatic-ripping-machine

./: .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
arm/: .flaskenv  runui.py
arm/config/: config.py  config_utils.py
arm/models/: alembic_version.py  config.py  job.py  notifications.py  system_drives.py  system_info.py  track.py  ui_settings.py  user.py
arm/ripper/: ARMInfo.py  ProcessHandler.py  __init__.py  arm_ripper.py  handbrake.py  identify.py  logger.py  main.py  makemkv.py  music_brainz.py  utils.py
arm/ui/: __init__.py  forms.py  (+5 more)
arm_wiki/: ARM-workflow-diagram.md  Alternate-Install-Debian.md  Alternate-Install-OMV.md  Alternate-Install-TrueNAS.md  Alternate-Install-Ubuntu.md  Change-Log.md  Config-abcde.conf.md  Config-apprise.yaml.md  Configuring-ARM.md  Contribute-DevTools.md  Contribute-Docker.md  Contribute-Wiki.md  Contribute.md  Docker-From-Source.md  Docker-Troubleshooting.md  Docker-Upgrading.md  Docker.md  FAQ.md  General-Troubleshooting.md  Getting-Started.md  Home.md  MakeMKV-Codes.md  MakeMKV-EULA.md  MakeMKV-Info.md  Related-Projects-and-HowTos.md  Setting-up-(auto-install).md  Status-Known-Issues.md  Status-Roadmap.md  Ubuntu-18.04-Service-file.md  Ubuntu-20.04-Automatic-Installation.md  Uninstall-A.R.M.md  Upgrading-from-previous-ARM-verions.md  VMware.md  Web-Settings-Drives.md  _Sidebar.md  amd-vce.md  intel-qsv.md  nvidia.md  related-howtos.md  workflow-diagram.md
devtools/: armdevtools.py  armdocker.py  armgit.py  armui.py  database.py  log.py
docs/: README-OMDBAPI.md  README-TMDBAPI.txt
fadr/: __init__.py  runui.py
scripts/: docker-setup.sh  ubuntu-20.04-install.sh  ubuntu-quicksync.sh  update_key.sh
setup/: .abcde.conf  30-arm.conf  30-fadr.conf  51-automatic-ripping-machine-venv.rules  51-automedia.rules  51-docker-fadr.rules  51-fully-automated-disc-ripper-venv.rules  arm.yaml  fadr.service  fadr.yaml  fadrui.service
(+129 files in other folders)
